added main activity and splash wait

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -3,5 +3,8 @@
 
     <string name="app_name">DerpTeam</string>
     <string name="action_settings">Settings</string>
+    
+    <!-- SPLASH -->
+    <string name="logo">Logo</string>
 
 </resources>
