--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="app_id">1417999875114121</string>
     <string name="action_settings">Settings</string>
     <string name="logo">Logo</string>
-    <string name="cd_my_team">My Team Button</string>
-    <string name="cd_create_member">Create Member Button</string>
+	<string name="no_friends">No Friends</string>
 
 
 </resources>
