--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="app_id">1417999875114121</string>
     <string name="action_settings">Settings</string>
     <string name="logo">Logo</string>
-	<string name="no_friends">No Friends</string>
-
+    <string name="no_friends">No Friends</string>
+    <string name="title_activity_take_picture">TakePictureActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
