--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="logo">Logo</string>
     <string name="no_friends">No Friends</string>
     <string name="title_activity_take_picture">TakePictureActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="enter_caption">Enter caption</string>
 
 </resources>
