added buttons over voting picture

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -6,10 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="logo">Logo</string>
     <string name="no_friends">No Friends</string>
-    <string name="enter_caption">Enter caption</string>
+    <string name="enter_caption">enter caption</string>
     <string name="starting_camera">Starting Camera</string>
     <string name="desc_taken_picture">Derp Picture</string>
     <string name="btn_assign_team">Assign To Team</string>
-    
+    <string name="desc_rate_image">Image To Rate</string>
+    <string name="desc_take_picture">Take Picture Button</string>
+    <string name="desc_show_gallery">Show Gallery Button</string>
 
 </resources>
