--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">DerpTeam</string>
     <string name="app_id">1417999875114121</string>
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
     <string name="logo">Logo</string>
     <string name="no_friends">No Friends</string>
     <string name="enter_caption">enter caption</string>
