--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="desc_show_gallery">Show Gallery Button</string>
     <string name="desc_vote_up">Vote Up Button</string>
     <string name="desc_vote_down">Vote Down Button</string>
+    <string name="dialog_no_picture">No picture to assign to team. Find something funny and take one!</string>
     <string name="dialog_go_back">Going back will lose the current picture. Are you sure you want to go back?</string>
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
