sharing from stock gallery working now

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="dialog_no">No</string>
     <string name="dialog_ok">OK</string>
     <string name="pick_friend">Assign To Team</string>
+    <string name="derp_assigned">Derp assigned!</string>
 
 </resources>
