requires input of title and caption for every pic

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="possessive_form">\'s</string>
     <string name="team">Team</string>
     <string name="assigned_by">Assigned By:</string>
+    <string name="not_complete">Please fill in all the fields.</string>
 
 </resources>
