--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="team">Team</string>
     <string name="assigned_by">Assigned By:</string>
     <string name="not_complete">Please fill in all the fields</string>
+    <string name="add_comment">Add Comment</string>
 
 </resources>
