some styling changes to view team page

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="possessive_form">\'s</string>
     <string name="team">Team</string>
     <string name="derped_by">Derped By:</string>
-    <string name="not_complete">Please fill in all the fields</string>
+    <string name="title_empty">Please fill in a title</string>
     <string name="add_comment">Add Comment</string>
     <string name="finished">Finished</string>
     <string name="empty_comment">Comment is empty</string>
