--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="report_bug">Report Bug</string>
     <string name="report">Report</string>
     <string name="bug_report_sent">Bug report sent. Thank you for your input!</string>
-
+	<string name="top_five_derps">Top 5 Derps</string>
+    
 </resources>
