--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -26,7 +26,8 @@
     <string name="desc_comment_icon">Comments</string>
     <string name="dialog_no_picture">No picture to assign to team. Find something funny and take one!</string>
     <string name="dialog_go_back">Going back will lose the current picture. Are you sure you want to go back?</string>
-    <string name="dialog_send_to_server">Assigning to team. Please wait.</string>
+    <string name="dialog_send_to_server">Derping your friend. Please wait.</string>
+    <string name="dialog_loading_fb_info">Loading Facebook info. Please wait.</string>
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
     <string name="dialog_ok">OK</string>
