--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -28,9 +28,13 @@
     <string name="dialog_go_back">Going back will lose the current picture. Are you sure you want to go back?</string>
     <string name="dialog_send_to_server">Derping your friend. Please wait.</string>
     <string name="dialog_loading_fb_info">Loading Facebook info. Please wait.</string>
+    <string name="dialog_new_or_gallery">Take new picture or select from gallery?</string>
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
     <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="dialog_new_picture">Take Picture</string>
+    <string name="dialog_from_gallery">From Gallery</string>
     <string name="assign_team">Assign Team</string>
     <string name="view_team">View Team</string>
     <string name="derp_assigned">Derp assigned!</string>
