--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="dialog_no_picture">No picture to assign to team. Find something funny and take one!</string>
     <string name="dialog_send_to_server">Derping your friend. Please wait.</string>
     <string name="dialog_loading_fb_info">Loading Facebook info. Please wait.</string>
-    <string name="dialog_new_or_gallery">Select from gallery or take new picture?</string>
+    <string name="dialog_new_or_gallery">Select from gallery, take new picture, or enter picture URL?</string>
     <string name="dialog_exit">Are you sure you want to exit?</string>
     <string name="assign_team">Assign Team</string>
     <string name="view_team">View Team</string>
