--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="bug_report_sent">Bug report sent. Thank you for your input!</string>
 	<string name="top_five_derps">Top 5 Derps</string>
 	<string name="invalid_image_url">Invalid image url</string>
+	<string name="response_code_error">HTTP response code error</string>
     
 </resources>
