--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_fb_share">Share</string>
     <string name="action_log_out">Log Out</string>
     <string name="action_report_bug">Report Bug</string>
+    <string name="action_show_leaderboard">Show Leaderboard</string>
     <string name="no_internet">No Internet Access</string>
     <string name="logo">Logo</string>
     <string name="no_friends">No Friends</string>
